--- a/ubiquity/localization/ja/builtincmds.po
+++ b/ubiquity/localization/ja/builtincmds.po
@@ -23,8 +23,7 @@ msgid "help|about|?"
 msgstr "ヘルプ|情報|？|?"
 
 msgctxt "help.description"
-msgid ""
-"Takes you to the Ubiquity <a href=\"about:ubiquity\">main help page</a>.<br/>\n"
+msgid "Takes you to the Ubiquity <a href=\"about:ubiquity\">main help page</a>.<br/>\n"
 "      Or, enter the name of a command to get help on that command."
 msgstr ""
 "Ubiquity の<a href=\"about:ubiquity\">ヘルプページ</a>を開きます。<br/>\n"
@@ -34,7 +33,7 @@ msgstr ""
 #. use | to separate multiple name values:
 msgctxt "open (ubiquity settings page).names"
 msgid "open|show"
-msgstr "開く|表示"
+msgstr "開く|開いて|開け|表示|表示して|表示しろ"
 
 msgctxt "open (ubiquity settings page).description"
 msgid "Opens one of the Ubiquity documentation/settings pages."
@@ -57,8 +56,7 @@ msgid "list ubiquity commands"
 msgstr "コマンドリスト|コマンド一覧"
 
 msgctxt "list ubiquity commands.description"
-msgid ""
-"Opens <a href=\"chrome://ubiquity/content/cmdlist.html\">the list</a>\n"
+msgid "Opens <a href=\"chrome://ubiquity/content/cmdlist.html\">the list</a>\n"
 "      of all Ubiquity commands available and what they all do."
 msgstr "Ubiquity の利用可能な<a href=\"chrome://ubiquity/content/cmdlist.html\">コマンドのリスト</a>を開きます。"
 
@@ -69,8 +67,7 @@ msgid "change ubiquity settings|change ubiquity preferences|change ubiquity skin
 msgstr "設定|設定変更|スキン変更|スキンを変更"
 
 msgctxt "change ubiquity settings.description"
-msgid ""
-"Takes you to the <a href=\"chrome://ubiquity/content/settings.html\">settings</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/settings.html\">settings</a> page,\n"
 "      where you can change your skin, key combinations, etc."
 msgstr "Ubiquity の<a href=\"chrome://ubiquity/content/settings.html\">設定</a>ページを開きます。スキンやキー設定などを変更できます。"
 
@@ -81,11 +78,9 @@ msgid "get support"
 msgstr "サポート"
 
 msgctxt "get support.description"
-msgid ""
-"Takes you to the <a href=\"chrome://ubiquity/content/support.html\">support</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/support.html\">support</a> page,\n"
 "    where you can report bugs, get troubleshooting help, etc."
-msgstr ""
-"Ubiquity の<a href=\"chrome://ubiquity/content/support.html\">サポート</a>ページを開きます。\n"
+msgstr "Ubiquity の<a href=\"chrome://ubiquity/content/support.html\">サポート</a>ページを開きます。\n"
 "バグ報告やトラブルシューティング等のヘルプがあります。"
 
 #. report bug command:
@@ -125,22 +120,28 @@ msgid "command history|vita"
 msgstr "コマンド履歴"
 
 msgctxt "command history.help"
-msgid ""
-"<ul style=\"list-style-image:none\">\n"
+msgid "<ul style=\"list-style-image:none\">\n"
 "    <li>Use accesskey or click to reuse.</li>\n"
 "    <li>Type to filter.</li>\n"
 "    <li>Execute to delete all matched histories.</li>\n"
 "    <li>Edit <a href=\"about:config\"><code>extensions.ubiquity.history.max</code></a> to\n"
 "      set max number of histories.</li></ul>"
-msgstr ""
-"<ul style=\"list-style-image:none\">\n"
+msgstr "<ul style=\"list-style-image:none\">\n"
 "    <li>履歴から実行するにはアクセスキーを押すかリストの項目をクリックします。</li>\n"
-"    <li>入力した文字にマッチした履歴を表示します。</li>\n"
-"    <li>単に実行するとマッチした履歴を削除します。</li>\n"
+"    <li>入力した文字にマッチする履歴を表示します。</li>\n"
+"    <li>単に実行するとマッチする履歴を削除します。</li>\n"
 "    <li>記憶する履歴の最大数は <a href=\"about:config\"><code>extensions.ubiquity.history.max</code></a>\n"
 "      に値を設定してください。</li></ul>"
 
 msgctxt "command history.description"
 msgid "Accesses your command history."
 msgstr "コマンド履歴にアクセスします。"
+
+msgctxt "command history.preview"
+msgid "No histories match."
+msgstr "履歴にマッチするものはありません。"
+
+msgctxt "command history.execute"
+msgid "Deleted matched histories. Click here to undo."
+msgstr "マッチする履歴を削除しました。元に戻すにはここをクリックしてください。"
 
