--- a/ubiquity/localization/ja/calendar.po
+++ b/ubiquity/localization/ja/calendar.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity\n"
-"POT-Creation-Date: \n"
+"POT-Creation-Date: 2009-06-26 14:21+0900\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Masahiko Imanaka <chimantaea_mirabilis@yahoo.co.jp>\n"
 "Language-Team: \n"
@@ -17,9 +17,10 @@ msgstr ""
 "X-Poedit-SourceCharset: utf-8\n"
 
 #. add to google calendar command:
+#. use | to separate multiple name values:
 msgctxt "add to google calendar.names"
-msgid "add"
-msgstr "追加する|追加して|追加しろ|追加|ついかする|ついかして|ついかしろ|ついか"
+msgid "add to google calendar|quick add"
+msgstr "予定追加|カレンダーに追加|追加する|追加して|追加しろ|追加|ついかする|ついかして|ついかしろ|ついか"
 
 msgctxt "add to google calendar.help"
 msgid "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=36604\" title=\"Quick Add\">Enter the event naturally</a>\n"
@@ -28,11 +29,24 @@ msgid "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=366
 "  <li>3pm Lunch with Myk and Thunder</li>\n"
 "  <li>Jono's Birthday on Friday</li>\n"
 "</ul><p>Currently, only works with <a href=\"http://calendar.google.com\">Google Calendar</a> so you'll need a Google account to use it.</p>"
-msgstr "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=36604\" title=\"Quick Add\">自然な言葉でイベントの詳細を入力してください。</a> 例:<ul>  <li>3pm Lunch with Myk and Thunder</li>  <li>Jono's Birthday on Friday</li></ul><p>現在このコマンドは <a href=\"http://calendar.google.com\">Google カレンダー</a> のみ対応です。</p>"
+msgstr "<a href=\"http://www.google.com/support/calendar/bin/answer.py?answer=36604\" title=\"Quick Add\">自然な言葉でイベントの詳細を入力してください。</a>\n"
+"例:\n"
+"<ul>\n"
+"  <li>3pm Lunch with Myk and Thunder</li>\n"
+"  <li>Jono's Birthday on Friday</li>\n"
+"</ul><p>現在このコマンドは <a href=\"http://calendar.google.com\">Google カレンダー</a> にのみ対応しています。</p>"
 
 msgctxt "add to google calendar.description"
 msgid "Adds an event to your calendar."
 msgstr "カレンダーにイベントを追加します。"
+
+msgctxt "add to google calendar.execute"
+msgid "Authorization error"
+msgstr "認証エラー"
+
+msgctxt "add to google calendar.execute"
+msgid "Please make sure you are logged in to Google Calendar"
+msgstr "Google カレンダーにログインしてください。"
 
 msgctxt "add to google calendar.execute"
 msgid "Event created"
@@ -42,10 +56,12 @@ msgctxt "add to google calendar.execute"
 msgid "Error creating the event"
 msgstr "エラーのためイベントが追加できませんでした。"
 
+
 #. check google calendar command:
+#. use | to separate multiple name values:
 msgctxt "check google calendar.names"
-msgid "check google calendar|check gcalendar"
-msgstr "カレンダーを確認する|カレンダーを確認して|カレンダーを確認しろ|カレンダーを確認|カレンダーを確認|カレンダー確認しろ|カレンダーをかくにんする|カレンダーをかくにんして|カレンダーをかくにんしろ|カレンダーをかくにん"
+msgid "check google calendar"
+msgstr "カレンダー確認|カレンダーを確認|カレンダーを確認する|カレンダーを確認して|カレンダーを確認しろ|カレンダー確認しろ|カレンダーをかくにんする|カレンダーをかくにんして|カレンダーをかくにんしろ|カレンダーをかくにん"
 
 msgctxt "check google calendar.help"
 msgid "Try issuing \"check on thursday\"<p>Currently, only works with <a href=\"http://calendar.google.com\">Google Calendar</a> so you'll need a Google account to use it.</p>"
