--- a/ubiquity/localization/ja/general.po
+++ b/ubiquity/localization/ja/general.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
-"POT-Creation-Date: \n"
+"POT-Creation-Date: 2009-06-20 00:47+0900\n"
 "Last-Translator: Masahiko Imanaka <chimantaea_mirabilis@yahoo.co.jp>\n"
 "Language-Team: ja\n"
 "MIME-Version: 1.0\n"
@@ -72,36 +72,38 @@ msgid "Highlights your current selection, like <span style=\"background: yellow;
 msgstr "現在の選択テキストを<span style=\"background: yellow; color: black;\">このように強調</span>します。"
 
 
-#. undo (text edit) command:
+#. undo text edit command:
 #. use | to separate multiple name values:
-msgctxt "undo (text edit).names"
-msgid "undo"
+msgctxt "undo text edit.names"
+msgid "undo text edit"
 msgstr "元に戻す|元に戻して|元に戻せ|取り消す|取り消して|取り消せ"
 
-msgctxt "undo (text edit).description"
-msgid "Undoes your latest style/formatting or page-editing changes."
-msgstr "最後に行ったスタイル/書式変更またはページ編集を元に戻します。"
+msgctxt "undo text edit.description"
+msgid "If you're in a rich-text-edit area, undoes your latest style/formatting or page-editing changes."
+msgstr "リッチテキスト編集フィールドで最後に行ったスタイル/書式変更またはページ編集を元に戻します。"
 
-msgctxt "undo (text edit).execute"
+msgctxt "undo text edit.execute"
 msgid "You're not in a rich text editing field."
 msgstr "リッチテキスト編集フィールドではありません。"
 
-#. redo (text edit) command:
+#. redo text edit command:
 #. use | to separate multiple name values:
-msgctxt "redo (text edit).names"
+msgctxt "redo text edit.names"
+msgid "redo text edit"
 msgstr "やり直し|やり直す|やり直して|やり直せ"
 
-msgctxt "redo (text edit).description"
-msgid "Redoes your latest style/formatting or page-editing changes."
-msgstr "最後に行ったスタイル/書式変更またはページ編集をやり直します。"
+msgctxt "redo text edit.description"
+msgid "If you're in a rich-text-edit area, redoes your latest style/formatting or page-editing changes."
+msgstr "リッチテキスト編集フィールドで最後に行ったスタイル/書式変更またはページ編集をやり直します。"
 
-msgctxt "redo (text edit).execute"
+msgctxt "redo text edit.execute"
 msgid "You're not in a rich text editing field."
 msgstr "リッチテキスト編集フィールドではありません。"
 
 #. count words command:
 #. use | to separate multiple name values:
 msgctxt "count words.names"
+msgid "count words|word count"
 msgstr "単語数|単語数カウント|数える|数えて|数えろ"
 
 msgctxt "count words.description"
@@ -109,8 +111,8 @@ msgid "Displays the number of words in a selection."
 msgstr "選択したテキストの単語数を表示します。"
 
 msgctxt "count words.preview"
-msgid "${num} words"
-msgstr "${num} 単語"
+msgid "<b>${num}</b> words"
+msgstr "<b>${num}</b> 単語"
 
 msgctxt "count words.preview"
 msgid "Displays the number of words in a selection."
@@ -124,85 +126,44 @@ msgctxt "count words.execute"
 msgid "No words selected."
 msgstr "テキストが選択されていません。"
 
-#. link (to wikipedia) command:
+#. link to wikipedia command:
 #. use | to separate multiple name values:
-msgctxt "link (to wikipedia).names"
-msgid "link|insert link|linkify"
-msgstr "リンク|リンクを挿入|リンクを挿入する|リンクを挿入して|リンクを挿入しろ|Wikipediaにリンク|Wikipediaリンク|Wikipediaリンクを挿入|Wikipediaリンクを挿入する|Wikipediaリンクを挿入して|Wikipediaリンクを挿入しろ|ウィキペディアにリンク|ウィキペディアリンク|ウィキペディアリンクを挿入|ウィキペディアリンクを挿入する|ウィキペディアリンクを挿入して|ウィキペディアリンクを挿入しろ"
+msgctxt "link to wikipedia.names"
+msgid "link to wikipedia"
+msgstr "リンク|リンクを挿入|リンクを挿入する|リンクを挿入して|リンクを挿入しろ|wikipediaにリンク|wikipediaリンク|wikipediaリンクを挿入|wikipediaリンクを挿入する|wikipediaリンクを挿入して|wikipediaリンクを挿入しろ|ウィキペディアにリンク|ウィキペディアリンク|ウィキペディアリンクを挿入|ウィキペディアリンクを挿入する|ウィキペディアリンクを挿入して|ウィキペディアリンクを挿入しろ"
 
-msgctxt "link (to wikipedia).description"
+msgctxt "link to wikipedia.description"
 msgid "Turns a phrase into a link to the matching Wikipedia article."
 msgstr "選択したフレーズを、マッチする Wikipedia の記事にリンクします。"
 
 #. calculate command:
 #. use | to separate multiple name values:
 msgctxt "calculate.names"
-msgid "calculate"
-msgstr "けいさん|答え|こたえ"
+msgid "calculate|gcalculate"
+msgstr "計算|関数計算|計算する|計算して|計算しろ|関数計算する|関数計算して|関数計算しろ|gcalculate"
 
 msgctxt "calculate.help"
-msgid "Try it out: issue &quot;calc 22/7 - 1&quot;."
-msgstr "入力例: 22/7-1の答え"
+msgid "Try <code>22/7, 25% of 700, sin(sqrt(ln(pi))), (1+i)^3, 15 mod 9, (5 choose 2) / 3!, speed of light in miles per hour, 3 dollars in euros, 242 in hex, MCMXVI in decimal</code>."
+msgstr "式の例: <code>22/7, 25% of 700, sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal</code>"
 
 msgctxt "calculate.description"
-msgid "Calculates the value of a mathematical expression."
-msgstr "簡単な数式を計算します。"
+msgid "Calculates using\n"
+"<a href=\"http://www.googleguide.com/help/calculator.html\">Google Calculator</a>\n"
+"which has all the features of a scientific calculator,\n"
+"    knows constants such as the speed of light,\n"
+"    and can convert between units and currencies.\n"
+"<br/>\n"
+"Uses\n"
+"<a href=\"http://jsfromhell.com/classes/math-parser\">MathParser</a>\n"
+"instead for simple expressions like\n"
+"<code>22/7</code>\n"
+"."
+msgstr "科学計算の機能をすべて備えた <a href=\"http://www.googleguide.com/help/calculator.html\">Google Calculator</a> で計算します。\n
+"様々な関数や定数、単位、通貨等をサポートしています。\n"
+"<br/>\n"
+"<code>22/7</code> のような簡単な計算式には\n"
+"<a href=\"http://jsfromhell.com/classes/math-parser\">MathParser</a> を使用します。"
 
-msgctxt "calculate.preview"
-msgid "Calculates an expression. E.g., 22/7."
-msgstr "簡単な数式を計算します。例: 22/7-1"
-
-msgctxt "calculate.preview"
-msgid "${expression} = <b>${result}</b>{if error}<p><b>Error:</b> ${error}</p>{/if}"
-msgstr "${expression} = <b>${result}</b>{if error}<p><b>エラー:</b> ${error}</p>{/if}"
-
-msgctxt "calculate.execute"
-msgid "Requires a expression."
-msgstr "式が必要です。"
-
-msgctxt "calculate.execute"
-msgid "Invalid expression"
-msgstr "無効な式です。"
-
-msgctxt "calculate.execute"
-msgid "Error calculating expression: ${expression}"
-msgstr "計算エラー: ${expression}"
-
-#. gcalculate command:
-#. use | to separate multiple name values:
-msgctxt "gcalculate.names"
-msgid "gcalculate"
-msgstr "計算|関数計算|gcalculate|計算する|計算して|計算しろ|関数計算する|関数計算して|関数計算しろ"
-
-msgctxt "gcalculate.help"
-msgid "Try 5% of 700,  sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal."
-msgstr "式の例: 5% of 700,  sin( sqrt( ln(pi))),  (1+i)^3,  15 mod 9, (5 choose 2) / 3!,  speed of light in miles per hour,  3 dollars in euros,  242 in hex, MCMXVI in decimal."
-
-msgctxt "gcalculate.description"
-msgid "Calculate knows many functions, constants, units, currencies, etc."
-msgstr "Google で計算します。様々な関数や定数、単位、通貨等をサポートしています。"
-
-msgctxt "gcalculate.preview"
-msgid "Examples: 3^4/sqrt(2)-pi,&nbsp;&nbsp;3 inch in cm,&nbsp;&nbsp; speed of light,&nbsp;&nbsp; 0xAF in decimal<br><u><a href=\\\"http://www.googleguide.com/calculator.html\\\">(Command List)</a></u>"
-msgstr "例: 3^4/sqrt(2)-pi,&nbsp;&nbsp;3 inch in cm,&nbsp;&nbsp; speed of light,&nbsp;&nbsp; 0xAF in decimal<br><u><a href=\\\"http://www.googleguide.com/calculator.html\\\">(コマンドリスト)</a></u>"
-
-#. sparkline command:
-#. use | to separate multiple name values:
-msgctxt "sparkline.names"
-msgid "sparkline|graph|insert sparkline"
-msgstr "sparkline|グラフ化|グラフにする|グラフにして|グラフにしろ|グラフ変換|グラフ変換する|グラフ変換して|グラフ変換しろ|スパークライン|スパークライン表示|スパークラインで表示|スパークラインで表示する|スパークラインで表示して|スパークラインで表示しろ"
-
-msgctxt "sparkline.help"
-msgid "Select a set of numbers -- in a table or otherwise -- and use this command to graph them as a sparkline. Don't worry about non-numbers getting in there. It'll handle them."
-msgstr "数値の表を選択してください。sparkline でグラフに表示します。数値以外の値も自動的に扱われます。"
-
-msgctxt "sparkline.description"
-msgid "Graphs the current selection, turning it into a sparkline."
-msgstr "現在の選択を sparkline でグラフに変換します。"
-
-msgctxt "sparkline.preview"
-msgid "Requires numbers to graph."
-msgstr "グラフにする数値が必要です。"
 
 #. translate command:
 #. use | to separate multiple name values:
@@ -220,24 +181,47 @@ msgid "You can specify the language to translate to,\n"
 "    to how much it can translate a selection at once.\n"
 "    If you want to translate a lot of text, leave out the input and\n"
 "    it will translate the whole page."
-msgstr "翻訳先の言語 (～に) と翻訳元の言語 (～から) を指定してください。例えば、「motherを英語から中国語に翻訳」と入力してください。 言語を省略すると補完されます。Web ページ上のテキストを選択して翻訳することもできますが、一度に多くのテキストは翻訳できません(多くても 2 段落程度まで)。一度に多くのテキストを翻訳をしたい場合はテキストを入力しないで実行してください。ページ全体が翻訳されます。"
+msgstr "翻訳先の言語 (～に) と翻訳元の言語 (～から) を指定してください。\n"
+"例えば、「motherを英語から中国語に翻訳」と入力してください。 言語を省略すると補完されます。\n"
+"Web ページ上のテキストを選択して翻訳することもできますが、一度に多くのテキストは翻訳できません(多くても 2 段落程度まで)。\n"
+"一度に多くのテキストを翻訳をしたい場合はテキストを入力しないで実行してください。ページ全体が翻訳されます。"
 
 msgctxt "translate.description"
 msgid "Translates from one language to another."
 msgstr "テキストを他の言語へ翻訳します。"
 
 msgctxt "translate.preview"
+msgid "Translates ${url} into <b>${toLang}</b>."
+msgstr "${url} を <b>${toLang}</b> に翻訳します。"
+
+msgctxt "translate.preview"
 msgid "Replaces the selected text with the <b>${toLang}</b> translation:"
 msgstr "選択したテキストを <b>${toLang}</b> の翻訳で置き換えます:"
+
+# shared strings in the function translateTo
+# manually added by mitcho
+msgid "Translation error: ${error}"
+msgstr "翻訳エラー: ${error}""
+
+msgid "invalid translation language pair"
+msgstr "翻訳言語の組み合わせが無効です。"
+
+msgid "could not reliably detect source language"
+msgstr "翻訳元の言語が確定できませんでした。"
+
 
 #. create bookmarklet command command:
 #. use | to separate multiple name values:
 msgctxt "create bookmarklet command.names"
 msgid "create bookmarklet command"
-msgstr "ブックマークレットコマンド生成|ブックマークレットからコマンド生成|ブックマークレットからコマンド化|ブックマークレットからコマンド化する|ブックマークレットからコマンド化して|ブックマークレットからコマンド化しろ"
+msgstr "ブックマークレットコマンド生成|ブックマークレットコマンドを生成|ブックマークレットコマンドを生成する|ブックマークレットコマンドを生成して|ブックマークレットコマンドを生成しろ|コマンド化|コマンド化する|コマンド化して|コマンド化しろ"
+
+msgctxt "create bookmarklet command.help"
+msgid "For instance, if you have a bookmarklet called 'press this', you can say 'create bookmarklet command from press this'."
+msgstr "例えば「press this」という名前のブックマークレットがある場合、「press thisからブックマークレットコマンドを生成」と入力してください。"
 
 msgctxt "create bookmarklet command.description"
-msgid "Creates a new command from a bookmarklet."
+msgid "Creates a new Ubiquity command from a bookmarklet."
 msgstr "ブックマークレットから新しいコマンドを生成します。"
 
 
@@ -245,17 +229,23 @@ msgstr "ブックマークレットから新しいコマンドを生成します
 #. use | to separate multiple name values:
 msgctxt "create search command.names"
 msgid "create search command"
-msgstr "検索コマンド生成|検索バーからコマンド生成|検索バーからコマンド生成する|検索バーからコマンド生成して|検索バーからコマンド生成しろ|検索バーからコマンド化|検索バーからコマンド化する|検索バーからコマンド化して|検索バーからコマンド化しろ"
+msgstr "検索コマンド化|検索コマンド化する|検索コマンド化して|検索コマンド化しろ|検索コマンド生成|コマンド生成|コマンド生成する|コマンド生成して|コマンド生成しろ"
 
 msgctxt "create search command.help"
 msgid "<ol style=\"list-style-image:none\">\n"
 "  <li>Select a searchbox.</li>\n"
-"  <li>Execute this command to create the new search command.</li>\n"
+"  <li>Say 'create search command mysearch'.</li>\n"
+"  <li>Execute.</li>\n"
+"  <li>You now have a command called 'mysearch'.</li>\n"
 "</ol>"
-msgstr "<ol style=\"list-style-image:none\">  <li>検索ボックスを選択します。</li>  <li>このコマンドを実行すると検索コマンドを生成します。</li></ol>"
+msgstr "<ol style=\"list-style-image:none\">\n"
+"  <li>検索ボックスを選択します。</li>\n"
+"  <li>「マイ検索を検索コマンド化」と入力して実行します。</li>\n"
+"  <li>「マイ検索」コマンドが生成されます。</li>\n"
+"</ol>"
 
 msgctxt "create search command.description"
-msgid "Creates a new Ubiquity command from a focused search-box."
+msgid "Creates a new Ubiquity command from a focused search-box and lets you set the command name."
 msgstr "フォーカスした検索ボックスから新しい Ubiquity コマンドを生成します。"
 
 msgctxt "create search command.preview"
